# zabbix-mcp-server

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  README.md  README2.md  SECURITY.md  config.example.toml  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
deploy/: install.sh  zabbix-mcp-server.service
src/zabbix_mcp/: __init__.py  __main__.py  cli.py  client.py  config.py  server.py  token_store.py
src/zabbix_mcp/admin/: ai_template.py  app.py  audit_writer.py  auth.py  config_writer.py  models.py  update_check.py  wizard_clients.py
src/zabbix_mcp/admin/static/: style.css
src/zabbix_mcp/admin/templates/: audit.html  base.html  dashboard.html  login.html  servers.html  servers_edit.html  settings.html  wizard.html
src/zabbix_mcp/admin/templates/partials/: flash.html  (+1 more)
src/zabbix_mcp/admin/views/: audit.py  dashboard.py  servers.py  settings.py  templates.py  tokens.py  uploads.py  users.py  wizard.py
src/zabbix_mcp/api/: __init__.py  administration.py  alerts.py  common.py  data_collection.py  monitoring.py  types.py  users.py
src/zabbix_mcp/reporting/: engine.py
tests/: test_admin.py  test_smoke.py
tests/installer/: Dockerfile.alma10  Dockerfile.alma9  Dockerfile.amazon2023  Dockerfile.debian12  Dockerfile.debian13  Dockerfile.fedora  Dockerfile.minimal  Dockerfile.oracle10  Dockerfile.oracle9  Dockerfile.rhel10  Dockerfile.rhel8-autoinstall  Dockerfile.rhel9  Dockerfile.suse15  Dockerfile.ubuntu22  Dockerfile.ubuntu24  README.md  run_all.sh
(+7 files in other folders)
