[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zabbix-mcp-server"
version = "1.0.0"
description = "Production-quality MCP server for the complete Zabbix API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Tomas Hermanek" }]
keywords = ["zabbix", "mcp", "model-context-protocol", "monitoring", "api"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "mcp>=1.1.3",
    "zabbix-utils>=2.0.2",
]

[project.scripts]
zabbix-mcp-server = "zabbix_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/tomashermanek/zabbix-mcp-server"
Issues = "https://github.com/tomashermanek/zabbix-mcp-server/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/zabbix_mcp"]
